tests/snapshots/e2e__e2e_input_data_test_results_detailed.snap
---
source: tests/e2e.rs
expression: normalize(&output)
---
= Input Data Test Results
:doctype: book
:toc: left
:toclevels: 3
:sectnums:
:sectnumlevels: 3
:chapter-label:
:icons: font
:imagesdir: images
:source-highlighter: rouge
[discrete]
== Document Information
*Project:* Input Data Verification System
*Test Date:* 2026-03-16T14:33:36.258035Z
*Environment:* Development
*Platform:* Linux x86_64
*Executor:* test-automation-system
*Execution Duration:* 2.5 seconds
<<<
== Executive Summary
=== Test Execution Overview
This document presents the results of test execution for Input Data Verification System.
[cols="1,2", options="header"]
|===
| Metric
| Value
| Total Test Cases
| 2
| Passed Test Cases
| 1
| Failed Test Cases
| 1
|===
=== Test Cases Status
[cols="1,1", options="header"]
|===
| Test Case ID
| Status
| TEST_FAILING_002
| ✗ FAIL
| TEST_PASSING_001
| ✓ PASS
|===
=== Pass/Fail Summary
*Pass Rate:* 50%
*Overall Status:* ✗ *FAIL*
<<<
= Detailed Test Results
== Test Case: TEST_FAILING_002
*Description:* Test case with some failing verifications
*Requirement:* TEST_REQ_002
*Item:* 1
*TC:* 2
*Overall Status:* ✗ FAIL
=== Execution Summary
[cols="1,1", options="header"]
|===
| Metric
| Count
| Total Steps
| 3
| Passed Steps
| 1
| Failed Steps
| 2
| Not Executed Steps
| 0
|===
=== Test Sequence 1: Mixed Results Sequence
*Sequence Status:* ✗ FAIL
==== Step-by-Step Results
[cols="1,2,1,2,2", options="header"]
|===
| Step
| Description
| Status
| Expected
| Actual
| 1
| Echo that passes
| ✓ Pass
| 
| 
| 2
| Command that should fail
| ✗ Fail
| 
| 
| 3
| Exit code mismatch
| ✗ Fail
| 
| 
|===
==== Expected vs Actual Comparison
[cols="1,1,2,2", options="header"]
|===
| Step
| Property
| Expected
| Actual
|===
==== Step 2 - Failure Details
*Description:* Command that should fail
*Reason:* Output mismatch: expected 'expected', got 'wrong'
[cols="1,2,2", options="header"]
|===
| Property
| Expected
| Actual
| Result
| 0
| 0
| Output
| expected
| wrong
| Success
| true
| N/A
|===
==== Step 3 - Failure Details
*Description:* Exit code mismatch
*Reason:* Success mismatch: expected true, got false
[cols="1,2,2", options="header"]
|===
| Property
| Expected
| Actual
| Result
| 0
| 1
| Output
| 
| 
| Success
| true
| N/A
|===
<<<
== Test Case: TEST_PASSING_001
*Description:* Test case with all passing verifications
*Requirement:* TEST_REQ_001
*Item:* 1
*TC:* 1
*Overall Status:* ✓ PASS
=== Execution Summary
[cols="1,1", options="header"]
|===
| Metric
| Count
| Total Steps
| 3
| Passed Steps
| 3
| Failed Steps
| 0
| Not Executed Steps
| 0
|===
=== Test Sequence 1: Passing Sequence
*Sequence Status:* ✓ PASS
==== Step-by-Step Results
[cols="1,2,1,2,2", options="header"]
|===
| Step
| Description
| Status
| Expected
| Actual
| 1
| Echo hello
| ✓ Pass
| 
| 
| 2
| True command
| ✓ Pass
| 
| 
|===
==== Expected vs Actual Comparison
[cols="1,1,2,2", options="header"]
|===
| Step
| Property
| Expected
| Actual
|===
=== Test Sequence 2: Second Passing Sequence
*Sequence Status:* ✓ PASS
==== Step-by-Step Results
[cols="1,2,1,2,2", options="header"]
|===
| Step
| Description
| Status
| Expected
| Actual
| 1
| Echo world
| ✓ Pass
| 
| 
|===
==== Expected vs Actual Comparison
[cols="1,1,2,2", options="header"]
|===
| Step
| Property
| Expected
| Actual
|===
<<<
== Final Verification Verdict
=== Overall Test Execution Status
[cols="1,2", options="header"]
|===
| Verdict
| Result
| Overall Status
| ✗ *FAIL*
| Total Test Cases
| 2
| Passed
| 1
| Failed
| 1
|===
=== Conclusion
1 test case(s) failed during execution. Review the detailed test results section for failure analysis and remediation actions.
<<<
== Requirements Summary
requirements_with_detail:
  - requirement: TEST_REQ_001
    items:
      - item: 1
        tc: 1
        id: TEST_PASSING_001
        pass: true
  - requirement: TEST_REQ_002
    items:
      - item: 1
        tc: 2
        id: TEST_FAILING_002
        pass: false
status_per_requirement:
  - requirement: TEST_REQ_001
    pass: true
  - requirement: TEST_REQ_002
    pass: false
requirements_by_status:
  pass:
    - TEST_REQ_001
  fail:
    - TEST_REQ_002
