tests/snapshots/e2e__e2e_multiple_by_type_mode.snap
---
source: tests/e2e.rs
expression: normalize(&output)
---
REVIEW: R001 - Approved
TEST: T001 - Test one
TEST: T002 - Test two
