tests/snapshots/e2e__e2e_multiple_levels_nested_include.snap
---
source: tests/e2e.rs
expression: "normalize(&output)"
---
# TC-NESTED
Level1: TOP
Level2: MID
Level3: DEEP
