tests/snapshots/e2e__e2e_multiple_mode.snap
---
source: tests/e2e.rs
expression: normalize(&output)
---
Item: First - 10
Item: Second - 20
Item: Third - 30
