tests/snapshots/e2e__e2e_nested_include_file.snap
---
source: tests/e2e.rs
expression: "normalize(&output)"
---
## Test Case: TC-001
**Nested content for First Test**
Value: 100
Status: PASS
## Test Case: TC-002
**Nested content for Second Test**
Value: 200
Status: FAIL
