tests/snapshots/e2e__e2e_nested_include_with_filters.snap
---
source: tests/e2e.rs
expression: "normalize(&output)"
---
### TC-001
Formatted: TEST 123 data 456
Regex:   test 123 data 456
