tests/snapshots/e2e__e2e_requirement_aggregation.snap
---
source: tests/e2e.rs
expression: normalize(&output)
---
= GSMA eUICC Test Suite Results - Q1 2024
:doctype: book
:toc: left
:toclevels: 3
:sectnums:
:sectnumlevels: 3
:chapter-label:
:icons: font
:imagesdir: images
:source-highlighter: rouge
[discrete]
== Document Information
*Project:* GSMA SGP.22 Compliance Testing
*Test Date:* 2024-03-15T14:30:00Z
*Environment:* GSMA Certification Lab - Environment 2
*Platform:* eUICC Test Platform v3.2.1 with SGP.22 v3.0 support
*Executor:* Automated Test Framework v2.5.0
*Execution Duration:* 3845.7 seconds
<<<
== Table of Contents
toc::[]
<<<
== Executive Summary
=== Test Execution Overview
This document presents the results of test execution for GSMA SGP.22 Compliance Testing.
[cols="1,2", options="header"]
|===
| Metric
| Value
| Total Test Cases
| 5
| Passed Test Cases
| 3
| Failed Test Cases
| 2
| Not Executed Test Cases
| 0
|===
=== Success Rate
*Pass Rate:* 60%
<<<
= Detailed Test Results
== Test Case: 4.2.2.2.1 TC_eUICC_ES6.UpdateMetadata
*Description*: Throughout all the ES6.UpdateMetadata test cases, SMS is used as the secure OTA channel.
*Overall Status*: ✓ PASS
== Execution Summary
[cols="1,1", options="header"]
|===
| Metric
| Count
| Total Steps
| 4
| Passed Steps
| 4
| Failed Steps
| 0
| Not Executed Steps
| 0
|===
== Test Sequence 1: Test Sequence #01 Nominal: Unset PPR1
*Sequence Status*: ✓ PASS
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 1
| MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE))
| ✓ Pass
| 2
| Fetch 'XX'
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 1
| N/A
| ✓ Pass
| 2
| N/A
| ✓ Pass
|===
== Test Sequence 2: Test Sequence #02 Nominal: Unset PPPR2 and update icon
*Sequence Status*: ✓ PASS
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 1
| MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE))
| ✓ Pass
| 2
| Fetch 'XX'
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 1
| N/A
| ✓ Pass
| 2
| N/A
| ✓ Pass
|===
== Test Case: 4.2.2.3 ANOTHER ONE
*Description*: Throughout all the ES6.UpdateMetadata test cases, SMS is used as the secure OTA channel.
*Overall Status*: ✗ FAIL
== Execution Summary
[cols="1,1", options="header"]
|===
| Metric
| Count
| Total Steps
| 4
| Passed Steps
| 1
| Failed Steps
| 1
| Not Executed Steps
| 2
|===
== Test Sequence 1: Test Sequence #01 Nominal: Unset PPR1
*Sequence Status*: ✗ FAIL
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 1
| MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE))
| ✓ Pass
| 2
| Fetch 'XX'
| ✗ Fail
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 1
| N/A
| ✓ Pass
| 2
| *Result:* MTD_CHECK_SMS_POR(0x9000)
*Output:* This operation was successful.
*Success:* 
| *Result:* MTD_CHECK_SMS_POR(0x6985)
*Output:* Command not allowed - security status not satisfied
*Reason:* Expected success status code 0x9000 but received error code 0x6985 indicating security validation failure
|===
== Test Sequence 2: Test Sequence #02 Nominal: Unset PPPR2 and update icon
*Sequence Status*: ✗ FAIL
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 1
| MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE))
| ⊘ Not Executed
| 2
| Fetch 'XX'
| ⊘ Not Executed
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 1
| N/A
| ⊘ Not Executed
| 2
| N/A
| ⊘ Not Executed
|===
== Test Case: 4.2.2.4 AN_eUICC_Performance_Analysis
*Description*: Analysis of eUICC performance under various load conditions to verify system requirements.
*Overall Status*: ✓ PASS
== Execution Summary
[cols="1,1", options="header"]
|===
| Metric
| Count
| Total Steps
| 9
| Passed Steps
| 9
| Failed Steps
| 0
| Not Executed Steps
| 0
|===
== Test Sequence 1: Performance Metrics Validation
*Sequence Status*: ✓ PASS
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 1
| Verify maximum throughput calculation meets requirement (>1000 ops/sec)
| ✓ Pass
| 2
| Verify 95th percentile response time is below 200ms threshold
| ✓ Pass
| 3
| Validate system stability under 80% resource utilization
| ✓ Pass
| 4
| Confirm predicted failure rate is less than 0.01% under normal load
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 1
| N/A
| ✓ Pass
| 2
| N/A
| ✓ Pass
| 3
| N/A
| ✓ Pass
| 4
| N/A
| ✓ Pass
|===
== Test Sequence 2: Load Balancing Model Verification
*Sequence Status*: ✓ PASS
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 1
| Validate M/M/c queuing model parameters and results
| ✓ Pass
| 2
| Verify multi-channel processing efficiency meets requirements
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 1
| N/A
| ✓ Pass
| 2
| N/A
| ✓ Pass
|===
== Test Sequence 3: Resource Utilization Analysis
*Sequence Status*: ✓ PASS
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 1
| Analyze CPU utilization patterns using time-series analysis
| ✓ Pass
| 2
| Analyze memory utilization patterns and trends
| ✓ Pass
| 3
| Validate resource utilization predictions against observed data
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 1
| N/A
| ✓ Pass
| 2
| N/A
| ✓ Pass
| 3
| N/A
| ✓ Pass
|===
== Test Case: 4.2.2.5 DM_eUICC_Profile_Management
*Description*: Demonstration of profile download, installation, and lifecycle management operations on a live eUICC device.
*Overall Status*: ✓ PASS
== Execution Summary
[cols="1,1", options="header"]
|===
| Metric
| Count
| Total Steps
| 10
| Passed Steps
| 10
| Failed Steps
| 0
| Not Executed Steps
| 0
|===
== Test Sequence 1: Profile Download and Installation
*Sequence Status*: ✓ PASS
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 1
| Power on the device with eUICC installed
| ✓ Pass
| 2
| Establish secure connection to SM-DP+ server
| ✓ Pass
| 3
| Initiate profile download using activation code
| ✓ Pass
| 4
| Monitor profile installation progress
| ✓ Pass
| 5
| Verify profile is listed in available profiles
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 1
| N/A
| ✓ Pass
| 2
| N/A
| ✓ Pass
| 3
| N/A
| ✓ Pass
| 4
| N/A
| ✓ Pass
| 5
| N/A
| ✓ Pass
|===
== Test Sequence 2: Profile Lifecycle Operations
*Sequence Status*: ✓ PASS
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 6
| Enable the newly installed profile
| ✓ Pass
| 7
| Perform basic connectivity test
| ✓ Pass
| 8
| Disable profile and switch to another profile
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 6
| N/A
| ✓ Pass
| 7
| N/A
| ✓ Pass
| 8
| N/A
| ✓ Pass
|===
== Test Sequence 3: Profile Deletion
*Sequence Status*: ✓ PASS
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 9
| Delete the test profile
| ✓ Pass
| 10
| Verify profile removal from eUICC
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 9
| N/A
| ✓ Pass
| 10
| N/A
| ✓ Pass
|===
== Test Case: 4.2.2.6 IN_eUICC_Security_Compliance
*Description*: Inspection of eUICC implementation to verify compliance with security requirements and cryptographic standards.
*Overall Status*: ✗ FAIL
== Execution Summary
[cols="1,1", options="header"]
|===
| Metric
| Count
| Total Steps
| 12
| Passed Steps
| 9
| Failed Steps
| 2
| Not Executed Steps
| 1
|===
== Test Sequence 1: Cryptographic Standards Compliance
*Sequence Status*: ✓ PASS
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 1
| Verify cryptographic algorithms comply with GSMA SGP.22 specification
| ✓ Pass
| 2
| Confirm secure channel protocol implementation follows TLS 1.2 or higher
| ✓ Pass
| 3
| Check certificate chain validation includes proper root CA verification
| ✓ Pass
| 4
| Validate private keys are stored in secure element with no external access
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 1
| N/A
| ✓ Pass
| 2
| N/A
| ✓ Pass
| 3
| N/A
| ✓ Pass
| 4
| N/A
| ✓ Pass
|===
== Test Sequence 2: Authentication and Communication Security
*Sequence Status*: ✗ FAIL
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 5
| Review authentication mechanisms for SM-DP+ and SM-DS communication
| ✓ Pass
| 6
| Inspect error handling to ensure no sensitive information leakage
| ✗ Fail
| 7
| Verify secure boot implementation and firmware signature validation
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 5
| N/A
| ✓ Pass
| 6
| *Result:* No sensitive data in error messages
*Output:* Error handling properly sanitizes all outputs
*Success:* 
| *Result:* Sensitive data exposed in error logs
*Output:* Error messages contain authentication tokens and internal system paths
*Reason:* Security vulnerability detected: error logs expose authentication tokens in plaintext when connection failures occur
| 7
| N/A
| ✓ Pass
|===
== Test Sequence 3: Memory Protection and Code Security
*Sequence Status*: ✗ FAIL
=== Step Results
[cols="1,3,2", options="header"]
|===
| Step
| Description
| Status
| 8
| Check memory protection mechanisms prevent unauthorized access
| ✓ Pass
| 9
| Confirm audit logging captures all security-relevant events
| ✓ Pass
| 10
| Review source code for common vulnerabilities (buffer overflow, injection, etc.)
| ✗ Fail
| 11
| Validate random number generator meets cryptographic quality standards
| ✓ Pass
| 12
| Check compliance with side-channel attack mitigation requirements
| ✓ Pass
|===
=== Expected vs Actual Results
[cols="1,2,2", options="header"]
|===
| Step
| Expected
| Actual
| 8
| N/A
| ✓ Pass
| 9
| N/A
| ✓ Pass
| 10
| *Result:* No critical or high severity vulnerabilities
*Output:* Code passes security review
*Success:* 
| *Result:* Critical vulnerability found
*Output:* Buffer overflow vulnerability detected in certificate parsing routine (CVE-2024-XXXXX equivalent)
*Reason:* Critical security vulnerability: insufficient bounds checking in X.509 certificate parser allows potential remote code execution
| 11
| N/A
| ✓ Pass
| 12
| N/A
| ✓ Pass
|===
<<<
== Final Verification Verdict
=== Overall Test Execution Status
[cols="1,2", options="header"]
|===
| Verdict
| Result
| Overall Status
| ✗ *FAIL*
| Total Test Cases
| 5
| Passed
| 3
| Failed
| 2
| Not Executed
| 0
|===
=== Conclusion
2 test case(s) failed during execution. Review the detailed test results section for failure analysis and remediation actions.
<<<
== Requirements Summary
requirements_with_detail:
  - requirement: XXX100
    items:
      - item: 1
        tc: 4
        id: 4.2.2.2.1 TC_eUICC_ES6.UpdateMetadata
        pass: true
      - item: 1
        tc: 4
        id: 4.2.2.3 ANOTHER ONE
        pass: false
  - requirement: XXX200
    items:
      - item: null
        tc: null
        id: 4.2.2.4 AN_eUICC_Performance_Analysis
        pass: true
  - requirement: XXX300
    items:
      - item: null
        tc: null
        id: 4.2.2.5 DM_eUICC_Profile_Management
        pass: true
  - requirement: XXX400
    items:
      - item: null
        tc: null
        id: 4.2.2.6 IN_eUICC_Security_Compliance
        pass: false
status_per_requirement:
  - requirement: XXX100
    pass: false
  - requirement: XXX200
    pass: true
  - requirement: XXX300
    pass: true
  - requirement: XXX400
    pass: false
requirements_by_status:
  pass:
    - XXX200
    - XXX300
  fail:
    - XXX100
    - XXX400
<<<
[discrete]
== Copyright Notice
(C) GSMA 2024. All rights reserved.
