tests/snapshots/e2e__e2e_template_injection_missing_requirement_aggregation_template.snap
---
source: tests/e2e.rs
expression: normalize(&output)
---
= Test Results
=== Test: TC-001
Status: true
Requirements summary not available
